[package]
name = "cuda-state-machine"
version = "0.1.0"
edition = "2021"
description = "Finite state machines with guards and hierarchies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-state-machine"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

